; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/sched/extr_em_meta.c_meta_var_change.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/sched/extr_em_meta.c_meta_var_change.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.meta_value = type { i64, i32 }
%struct.nlattr = type { i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.meta_value*, %struct.nlattr*)* @meta_var_change to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @meta_var_change(%struct.meta_value* %0, %struct.nlattr* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.meta_value*, align 8
  %5 = alloca %struct.nlattr*, align 8
  %6 = alloca i32, align 4
  store %struct.meta_value* %0, %struct.meta_value** %4, align 8
  store %struct.nlattr* %1, %struct.nlattr** %5, align 8
  %7 = load %struct.nlattr*, %struct.nlattr** %5, align 8
  %8 = call i32 @nla_len(%struct.nlattr* %7)
  store i32 %8, i32* %6, align 4
  %9 = load %struct.nlattr*, %struct.nlattr** %5, align 8
  %10 = call i32 @nla_data(%struct.nlattr* %9)
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* @GFP_KERNEL, align 4
  %13 = call i64 @kmemdup(i32 %10, i32 %11, i32 %12)
  %14 = load %struct.meta_value*, %struct.meta_value** %4, align 8
  %15 = getelementptr inbounds %struct.meta_value, %struct.meta_value* %14, i32 0, i32 0
  store i64 %13, i64* %15, align 8
  %16 = load %struct.meta_value*, %struct.meta_value** %4, align 8
  %17 = getelementptr inbounds %struct.meta_value, %struct.meta_value* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = icmp eq i64 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %2
  %21 = load i32, i32* @ENOMEM, align 4
  %22 = sub nsw i32 0, %21
  store i32 %22, i32* %3, align 4
  br label %27

23:                                               ; preds = %2
  %24 = load i32, i32* %6, align 4
  %25 = load %struct.meta_value*, %struct.meta_value** %4, align 8
  %26 = getelementptr inbounds %struct.meta_value, %struct.meta_value* %25, i32 0, i32 1
  store i32 %24, i32* %26, align 8
  store i32 0, i32* %3, align 4
  br label %27

27:                                               ; preds = %23, %20
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i32 @nla_len(%struct.nlattr*) #1

declare dso_local i64 @kmemdup(i32, i32, i32) #1

declare dso_local i32 @nla_data(%struct.nlattr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
